--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
     <title>React App</title>
-  <script defer src="index.js"></script></head>
+  <script defer src="/roox-test-task/index.js"></script></head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
